--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .social__link {
